--- a/package-config.cmake.in
+++ b/package-config.cmake.in
@@ -5,4 +5,4 @@ include(CMakeFindDependencyMacro)
 
 include( "${CMAKE_CURRENT_LIST_DIR}/bonefish-native-targets.cmake" )
 
-include( "${CMAKE_CURRENT_LIST_DIR}/bonefish-native-macros.cmake" )
+#include( "${CMAKE_CURRENT_LIST_DIR}/bonefish-native-macros.cmake" )
