--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,10 +10,10 @@ project(bonefish-native LANGUAGES CXX VERSION 0.1.0 )
 add_library( ${PROJECT_NAME} INTERFACE )
 add_library( ${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME} )
 
-target_include_directories( ${PROJECT_NAME}  
-  INTERFACE	
-    $<BUILD_INTERFACE: ${CMAKE_CURRENT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/include>
+target_include_directories( ${PROJECT_NAME}
+  INTERFACE
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/>
+    $<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>
 )
 
 ### Install and export target set ###
@@ -24,7 +24,7 @@ install( TARGETS ${PROJECT_NAME} EXPORT ${PROJECT_NAME}-targets
 )
 
 install( DIRECTORY include
-  DESTINATION 
+  DESTINATION
     ${CMAKE_INSTALL_INCLUDEDIR}
   COMPONENT
     dev
@@ -34,22 +34,24 @@ install( DIRECTORY include
 
 set( build_config_location ${CMAKE_CURRENT_BINARY_DIR} )
 
-export( EXPORT ${PROJECT_NAME}-targets 
-  FILE 
+message( "EXPORT ${PROJECT_NAME}-targets -> ${build_config_location}/${PROJECT_NAME}-targets.cmake" )
+
+export( EXPORT ${PROJECT_NAME}-targets
+  FILE
     "${build_config_location}/${PROJECT_NAME}-targets.cmake"
-  NAMESPACE 
+  NAMESPACE
     ${PROJECT_NAME}::
 )
 
-write_basic_package_version_file( 
+write_basic_package_version_file(
   "${build_config_location}/${PROJECT_NAME}-config-version.cmake"
-  VERSION 
+  VERSION
     ${PROJECT_VERSION}
   COMPATIBILITY
     AnyNewerVersion
 )
 
-configure_package_config_file( 
+configure_package_config_file(
   "package-config.cmake.in"
   "${PROJECT_NAME}-config.cmake"
   INSTALL_DESTINATION
@@ -64,11 +66,11 @@ export( PACKAGE ${PROJECT_NAME} )
 ### Install package config ###
 
 set( install_config_location ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME} )
-	
-install( EXPORT ${PROJECT_NAME}-targets 
-  DESTINATION 
+
+install( EXPORT ${PROJECT_NAME}-targets
+  DESTINATION
     ${install_config_location}
-  NAMESPACE 
+  NAMESPACE
     ${PROJECT_NAME}::
   COMPONENT
     dev
@@ -77,7 +79,7 @@ install( EXPORT ${PROJECT_NAME}-targets
 install(
   FILES
     "${build_config_location}/${PROJECT_NAME}-config.cmake"
-    "${build_config_location}/${PROJECT_NAME}-config-version.cmake" 
+    "${build_config_location}/${PROJECT_NAME}-config-version.cmake"
   DESTINATION
     ${install_config_location}
   COMPONENT
